// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`load graph 1`] = `
"my-project
├─┬ foo@1.0.0
│ └── bar@1.0.0
└── baz (custom:baz@1.0.0)
"
`;

exports[`load graph with confused manifest 1`] = `
"my-project
├─┬ foo@1.0.0
│ └── bar@1.0.0
├── baz (custom:baz@1.0.0)
└── confused (confused)
"
`;
